--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>navbar</nav>
+    <div class="top-banner">
+      <div class="banner-text">
+        🥳 New to UsabilityHub: Open and closed card sorting! Read more →
+      </div>
+    </div>
+    <nav>
+      <div class="container flex main-nav">
+        <a href="#" class="logo">
+          <img src="assets/asset_1.png" alt="company logo">
+        </a>
+        <div class="nav-links">
+          <ul class="flex">
+            <li><a href="#" class="hover-link">product</a></li>
+            <li><a href="#" class="hover-link">customer</a></li>
+            <li><a href="#" class="hover-link">pricing</a></li>
+            <li><a href="#" class="hover-link">resources</a></li>
+            <li><a href="#" class="hover-link secondary-btn">sign in</a></li>
+            <li><a href="#" class="hover-link primary-btn">sign up</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <header>header section</header>
     <section>company</section>
     <section>feature</section>
