--- a/index.html
+++ b/index.html
@@ -29,7 +29,25 @@
         </div>
       </div>
     </nav>
-    <header>header section</header>
+    <header>
+      <div class="container flex header-section">
+        <div class="header-left flex">
+          <h1>
+            Design Confidently
+          </h1>
+          <p>
+            UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.
+          </p>
+          <a href="#" class="primary-btn ">Get started</a>
+
+        </div>
+        <div class="header-right">
+          <img src="assets/asset_2.png" alt="header image">
+        </div>
+      </div>
+
+
+    </header>
     <section>company</section>
     <section>feature</section>
     <section>big feature</section>
